--- a/index.css
+++ b/index.css
@@ -50,8 +50,8 @@ body{
 }
 #header{
  height: 70px;
- /* background-color: red; */
- /* border: red solid 2px; */
+  /* background-color: red; */
+  /* border: red solid 2px;  */
  display: flex;
  align-items: center;
  padding: 0px 10px;
@@ -60,7 +60,7 @@ body{
 .logo{
     width: 23%;
 }
-.logo > img{
+.logo > a > img{
     width: 80%;
     margin: 10px 0px 0px 20px;
 }
@@ -106,6 +106,9 @@ form{
 }
 #search:focus-within .searchRecent{
     display: block;
+    background-color: white;
+    color: white;
+   /* background-position: 1px; */
 }
 .searchRecent > p{
     line-height: 13px;
@@ -118,6 +121,7 @@ form{
     /* line-height: 14px; */
     color: #0e123c;
     font-weight: lighter;
+    text-align: left;
 }
                                    /* <!-- Login&Cart Pages --> */
 .signpage{
@@ -130,12 +134,18 @@ form{
     text-decoration: none;
     color: black;
 }
+.formLogin{
+    text-decoration: none;
+    color: black;
+    position: relative;
+    
+}
 
 
                                  /* <!-- Navigation Part --> */
 #navbar{
     height: 60px;
-    background-color: rgb(236, 234, 232);
+    background-color:rgb(241, 237, 237);
     width: 100%;
     display: flex;
     justify-content: space-between;
@@ -144,7 +154,7 @@ form{
     height: 60px;
    /* align-items: center; */
   padding-top: 20px;
-  color: black;
+  /* color: black; */
   font-size: 15px;
   margin-left: 15px;
  
@@ -210,22 +220,6 @@ margin: 30px 0px 0px 10px;
     margin: 30px 0px 0px 90px;
     font-weight: bold;
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
        /*------------------------------ Home Pages Images ---------------------------------------*/
 
 .lensimg{
@@ -246,5 +240,122 @@ margin: 30px 0px 0px 10px;
 .subLens > h2{
     font-size: 15px;
     color: rgb(103, 101, 101);
+    text-align: center;
+}
+.member,
+.member > img{
+    width: 100%;
+    margin-top: 20px;
+}
+.fiting{
+    display: grid;
+    grid-template-columns: repeat(2, 500px);
+    gap: 20px;
+   margin-left: 130px;
+}
+.fiting > div > img{
+    width: 100%;
+}
+.save > img{
+    width: 1000px; 
+    margin-left: 140px; 
+}
+.morelens{
+    display: flex;
+    margin-left: 100px;
+}
+.morelens > img{
+    width: 500px;
+    margin-left: 20px;
+}
+.buy{
+    display: grid;
+    grid-template-columns: repeat(2, 500px);
+    gap: 20px;
+   margin-left: 130px;
+}
+.buy > img{
+width: 100%;
+}
+.custmor{
+    width: 100%;
+    background-color: rgb(239, 239, 97);
+    padding: 10px;
+    margin-top: 20px;
+}
+.custmor > div{
+    display: flex;
+    justify-content: space-between;
+    margin: 0px 10px 0px 10px;
+}
+.custmor > div > a >img{
+    width: 400px;
+}
+.followus{
+    width: 100%;
+    background-color: #24155f;
+    padding: 20px 40px 0px 40px;
+    color: white;
+}
+.followus > h1{
+    margin: 20px 30px 0px 30px;
+    line-height: 25px;
+}
+.followus > p{
+    margin: 30px 30px 0px 30px;
+    line-height: 25px;
+}
+.glasses{
+    width: 100%;
+    display: flex;
+    padding: 0px 40px 0px 0px;
+}
+
+.glasses > div{
+     width: 80%;
+    display: flex;
+    justify-content: space-between;
+    margin-left: 60px;
+    border-bottom: white solid 1px;
+}
+.glasses > div > button{
+    width: 30px;
+    height: 30px;
+    border-radius: 80px;
+    margin-top: 20px;
+    font-size: 20px;
+    background-color: #24155f;
+    color: white;
+    font-weight: bolder;
+    border: white solid 2px;
+}
+.app{
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    padding: 20px 60px 0px 60px;
+    border-bottom: white solid 1px;
+}
+.app > .service{
+    width: 55%;
+    display: flex;
+    justify-content: space-between;
+    padding: 0px 80px 0px 0px;
+}
+.app > .service > div > h1{
+    font-weight: lighter;
+}
+.app > .download{
+    width: 25%;
+    text-align: center;
+    margin-top: 50px;
+}
+.web >div {
+    width: 20%;
+    display: flex;
+    justify-content: space-between;
+}
+h1{
+    font-weight: lighter;
     text-align: center;
 }
