--- a/index.css
+++ b/index.css
@@ -71,13 +71,14 @@ body{
     position: relative;
     margin-left: 5px;
 }
- .num{
-width: 12%;
-font-size: 20px;
-color: rgb(67, 66, 65);
-    /* margin: 0px 0px 10px 10px; */
-
-}
+.num{
+    width: 12%;
+    font-size: 20px;
+    color: rgb(67, 66, 65);
+        /* margin: 0px 0px 10px 10px; */
+        font-weight: bold;
+    
+    }
 form{
     width: 100%;
 }
@@ -104,12 +105,11 @@ form{
     border-top: white solid 1px;
     /* box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px; */
 }
-#search:focus-within .searchRecent{
+/* #search:focus-within .searchRecent{
     display: block;
     background-color: white;
     color: white;
-   /* background-position: 1px; */
-}
+} */
 .searchRecent > p{
     line-height: 13px;
     font-size: 18px;
@@ -132,54 +132,52 @@ form{
 }
 .signpage > a{
     text-decoration: none;
+}
+.signpage > a > h5{
     color: black;
-}
-.formLogin{
-    text-decoration: none;
-    color: black;
-    position: relative;
-    
-}
-
-
-                                 /* <!-- Navigation Part --> */
-#navbar{
-    height: 60px;
-    background-color:rgb(241, 237, 237);
-    width: 100%;
-    display: flex;
-    justify-content: space-between;
-}
-#navpages{
-    height: 60px;
-   /* align-items: center; */
-  padding-top: 20px;
-  /* color: black; */
-  font-size: 15px;
-  margin-left: 15px;
- 
-}
-#navpages > a{
-    text-decoration: none;
-    margin-left: 10px;
-    color: black;
-    height: 100%;
+    /* margin-top: 50px; */
+    font-size: 15px;
+    font-weight: lighter;
     position: relative;
 }
-#navpages > a:hover{
-    height: 100%;
-    border-bottom: 3px black solid;
-    padding-bottom: 20px;
-}
-#navicons{
-    margin-right: 30px;
-}
-#navicons > img{
-    width: 70px;
-    padding-top: 13px;
-    margin-left: 3px;
-}  
 
+                       /* <!-- Navigation Part --> */
+                       #navbar{
+                        height: 60px;
+                        background-color:rgb(241, 237, 237);
+                        width: 100%;
+                        display: flex;
+                        justify-content: space-between;
+                    }
+                    #navpages{
+                        height: 60px;
+                       /* align-items: center; */
+                      padding-top: 20px;
+                      /* color: black; */
+                      font-size: 15px;
+                      margin-left: 15px;
+                     
+                    }
+                    #navpages > a{
+                        text-decoration: none;
+                        margin-left: 10px;
+                        color: black;
+                        height: 100%;
+                        position: relative;
+                    }
+                    #navpages > a:hover{
+                        height: 100%;
+                        border-bottom: 3px black solid;
+                        padding-bottom: 20px;
+                    }
+                    #navicons{
+                        margin-right: 30px;
+                    }
+                    #navicons > img{
+                        width: 70px;
+                        padding-top: 13px;
+                        margin-left: 3px;
+                    }  
                      /*------------------------ Submenu Modules -------------------------*/
 
 .subMenu{
@@ -221,7 +219,37 @@ margin: 30px 0px 0px 10px;
     font-weight: bold;
 }
        /*------------------------------ Home Pages Images ---------------------------------------*/
-
+.slide{
+    width: 100%;
+    display: flex;
+    position: relative;
+}
+.slide > img{
+    width: 100%;
+   
+}
+.prev{
+    width: 50px;
+    height: 50px;
+    position: absolute;
+    left: 0px;
+    background: none;
+    top: 140px;
+    border: none;
+    font-size: 50px;
+    color: white;
+}
+.next{
+        width: 50px;
+        height: 50px;
+        position: absolute;
+        right: 0px;
+        background: none;
+        top: 140px;
+        border: none;
+        font-size: 50px;
+        color: white;
+}
 .lensimg{
     width: 100%;
     display: flex;
